[metadata]
name = jds
version = 0.0.1
author = Jagadeesh
author_email = jagadeeshmouthouvel@gmail.com
description = Data structure library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jagadeesh-tolnut/jds
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True